[gd_scene load_steps=2 format=3 uid="uid://c3uboiutnnomu"]

[ext_resource type="Script" path="res://scripts/battleControls.gd" id="1_jfsyx"]

[node name="battleScene" type="Node2D"]
script = ExtResource("1_jfsyx")

[node name="Node" type="Node" parent="."]

[node name="Button" type="Button" parent="Node"]
offset_left = 141.0
offset_top = 535.0
offset_right = 149.0
offset_bottom = 543.0
text = "1"

[node name="Button2" type="Button" parent="Node"]
offset_left = 298.0
offset_top = 535.0
offset_right = 355.0
offset_bottom = 566.0
text = "delete"

[node name="Button3" type="Button" parent="Node"]
offset_left = 501.0
offset_top = 557.0
offset_right = 509.0
offset_bottom = 565.0
text = "save Creature"

[node name="Button4" type="Button" parent="Node"]
offset_left = 664.0
offset_top = 558.0
offset_right = 778.0
offset_bottom = 589.0
text = "load Creature"

[node name="p1Spawn" type="Node2D" parent="."]
position = Vector2(168, 117)

[connection signal="pressed" from="Node/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Node/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Node/Button3" to="." method="_on_button_3_pressed"]
